--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Inter, sans-serif;
 }
 
 .container {
@@ -77,7 +77,6 @@ header {
     display:flex;
     align-items: center;
     justify-content: center;
-     background-color: grey;
 }
 
  .title{
@@ -101,7 +100,32 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     background-color: #f2f2f2;
    }
 
+   .description{
+   
+    height: 80vh;
+    width:50%;
+   
+   }
+   
+  .picture{ width: 300px;
+height: 300px;}
+
+.main-content h1{
+    font-size: 72px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.main-content h4{
+    font-size: 24px;
+    font-weight: 300;
+    text-align: center;
+}
+  
+.about_page{
+    background-color: #f2f2f2;
+}
