--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 934px;
+    margin-bottom: 150px 150px;
     background-color: white;
 }
 .resume-button a{
@@ -85,29 +86,44 @@ header {
     align-items: center;
     
     text-align-last: center;
-    column-gap: 1 rem;
+    column-gap: 2 rem;
  }
-  .title::before, .title::after{
+  .title::before{
    content: " ";
    height:1px;
     width: 360px;
     background-color:#000;
     display: block; 
+    margin-left: 250px;
   }
+  .title::after{
+    content: " ";
+    height:1px;
+     width: 360px;
+     background-color:#000;
+     display: block; 
+     margin-right: 145px;
+   }
 
   .myself
    {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    margin-left: 250px;
+    height: 100%;
     background-color: #f2f2f2;
+    width: 70%;
+   }
+.description{
+   margin-top: 49px;
    }
 
-   .description{
+.description p{
    
-    height: 80vh;
-    width:50%;
+    margin-bottom: 30px;
    
    }
    
@@ -129,3 +145,7 @@ height: 300px;}
 .about_page{
     background-color: #f2f2f2;
 }
+.fa-angles-down {
+    font-size: 36px; 
+
+  }
