JavaScript to toggle CSS classes or directly manipulate styles to show/hide menu items

--- a/style.css
+++ b/style.css
@@ -239,4 +239,8 @@ height: 300px;}
   .navbar .menu-items li a:hover {
     text-decoration: underline; 
   }
+
+  #about{
+   display: none;
+}
   
